fix gaps

--- a/src/jg/coop/css/content/_candidates.scss
+++ b/src/jg/coop/css/content/_candidates.scss
@@ -221,6 +221,9 @@
 }
 
 .candidates-badges {
+  display: flex;
+  flex-wrap: wrap;
+  gap: map-get($spacers, 1);
   line-height: 2;
 }
 
